// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled with autoLabel composition 1`] = `
.emotion-0 {
  color: blue;
  color: red;
  color: blue;
  font-size: 20px;
  font-size: 32px;
}

<h1
  className="legacy__class emotion-0 emotion-1"
  scale={2}
>
  hello world
</h1>
`;

exports[`styled with autoLabel composition 2`] = `
".css-17vftq3-cssA {
  color: blue;
}

.css-bit9r7-cssA-cssB {
  color: blue;
  color: red;
}

.css-10bx2m1-BlueH1-cssA-cssB-FinalH2 {
  color: blue;
  color: red;
  color: blue;
  font-size: 20px;
  font-size: 32px;
}"
`;

exports[`styled with autoLabel composition 3`] = `
".css-17vftq3-cssA {
  color: blue;
}

.css-bit9r7-cssA-cssB {
  color: blue;
  color: red;
}"
`;

exports[`styled with autoLabel composition with objects 1`] = `
.emotion-0 {
  color: #333;
  font-size: 1.333em;
  height: 64px;
  font-size: 3.157334518321em;
  font-size: 32px;
}

@media only screen and (-webkit-min-device-pixel-ratio:1.5), only screen and (min--moz-device-pixel-ratio:1.5), only screen and (-o-min-device-pixel-ratio:1.5/1), only screen and (min-resolution:144dpi), only screen and (min-resolution:1.5dppx) {
  .emotion-0 {
    font-size: 1.4323121856191332em;
  }
}

<h1
  className="legacy__class emotion-0 emotion-1"
  scale={2}
>
  hello world
</h1>
`;

exports[`styled with autoLabel composition with objects 2`] = `
".css-16foi5x-cssB {
  color: #333;
  font-size: 1.333em;
  height: 64px;
}

@media only screen and (-webkit-min-device-pixel-ratio:1.5), only screen and (min--moz-device-pixel-ratio:1.5), only screen and (-o-min-device-pixel-ratio:1.5/1), only screen and (min-resolution:144dpi), only screen and (min-resolution:1.5dppx) {
  .css-16foi5x-cssB {
    font-size: 1.4323121856191332em;
  }
}

.css-qmffsn-H1-cssB-H2 {
  color: #333;
  font-size: 1.333em;
  height: 64px;
  font-size: 3.157334518321em;
  font-size: 32px;
}

@media only screen and (-webkit-min-device-pixel-ratio:1.5), only screen and (min--moz-device-pixel-ratio:1.5), only screen and (-o-min-device-pixel-ratio:1.5/1), only screen and (min-resolution:144dpi), only screen and (min-resolution:1.5dppx) {
  .css-qmffsn-H1-cssB-H2 {
    font-size: 1.4323121856191332em;
  }
}"
`;

exports[`styled with autoLabel higher order component 1`] = `
.emotion-0 {
  font-size: 20px;
  background-color: #7fc8d6;
  background-color: '#343a40';
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="emotion-0 emotion-1"
/>
`;

exports[`styled with autoLabel higher order component 2`] = `
".css-cmfehv-squirtleBlueBackground {
  background-color: #7fc8d6;
}

.css-muei2v-Content-NewComponent-squirtleBlueBackground {
  font-size: 20px;
  background-color: #7fc8d6;
  background-color: '#343a40';
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}"
`;
